examples/errors/main_with_args.spl


main(a,b) {
    return a;
}